--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
     <title>Reactstrap</title>
 
     <!-- Minified Bootstrap 4 -->
@@ -13,11 +13,13 @@
     <link href="css/styles.css" rel="stylesheet">
     <!-- Minified Font Awesome -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Google Maps -->
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 
   </head>
   <body>
     <!-- div for rendering App.js -->
-    <div id="app"></div>
+    <div class="app container"></div>
 
     <!-- START SCRIPTS ----------------------------------------->
     <!-- Load bundle.js for react components and compiled ES6 -->
