--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Reactstrap</title>
+    <title>Forecast Fetcher</title>
 
     <!-- Minified Bootstrap 4 -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
