--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,6 @@
     <link href="css/styles.css" rel="stylesheet">
     <!-- Minified Font Awesome -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Google Maps -->
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
 
   </head>
   <body>
@@ -30,6 +28,14 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Google Maps -->
+    <script
+      async
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYQYp473kPmA2US0jmv1IW1UVN8A-7dvU&callback=initMap"
+      type="text/javascript">
+    </script>
     <!-- END SCRIPTS ----------------------------------------->
   </body>
 </html>
